<resources>
  <string name="app_name">Jobs</string>
  <string name="app_description">This app made for Fanavard App Developer contest, any way Enjoy it ☻ !</string>
  <string name="app_developer">Hossain Khademian and SaeedKhademian</string>
  <string name="leak_canary_display_activity_label">Jobs Leaks</string>

  <string name="prompt_phone">Phone</string>
  <string name="prompt_password">Password</string>

  <string name="error_invalid_phone">This phone number is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>

  <string name="title_about">About US</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="title_chats">Chats</string>
  <string name="title_chat_detail">Chat Detail</string>
  <string name="title_request_list">Request</string>
  <string name="title_request_detail">Request Detail</string>
  <string name="title_request_edit">Request Edit</string>
  <string name="title_register">Register a new account</string>
  <string name="title_login">Login to account</string>
  <string name="title_loading">Loading data from server</string>
  <string name="title_about_developer">About developer:</string>
  <string name="title_wait">Wait a little</string>
  <string name="title_requests">Requests</string>
  <string name="subtitle_loading">Please wait …</string>

  <string name="des_ic_fanavard">Fanavard Contest Icon</string>
  <string name="des_ic_launcher">Application Icon</string>
  <string name="des_background">Background</string>
  <string name="des_avatar">User Avatar</string>

  <string name="message_loading">please don\'t exit the app while loadings</string>
  <string name="message_register">if you don\'t have account,  
    <a href="#">Register</a>
  </string>
  <string name="message_login">if you have account,  
    <a href="#">Login</a>
  </string>

  <string name="action_register">Register</string>
  <string name="action_login">Login</string>
  <string name="action_send">Send</string>
  <string name="action_media">Attach media</string>
  <string name="action_emoji">Send emoji</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_back">Back</string>
  <string name="action_edit">Edit</string>
  <string name="action_submit">Submit</string>
  <string name="action_choose">Choose</string>
  <string name="action_clear">Clear</string>
  <string name="action_add">Add</string>
  <string name="action_request_edit">Edit Request</string>
  <string name="action_request_cancel">Archive Request</string>
  <string name="action_request_ignore">Ignore Changes</string>
  <string name="action_request_save">Save Request</string>

  <string name="chat_message">Your message …</string>

  <string name="field_request_type">Request type</string>
  <string name="field_request_job">Request for Job</string>
  <string name="field_request_skills">Request Skills</string>
  <string name="field_request_user">Requester User</string>
  <string name="field_request_detail">Request Detail</string>
  <string name="field_request_state">Request State</string>
  <string name="field_request_brokers">Applied Brokers</string>
  <string name="field_request_matches">Prompted Matches</string>

  <string name="choice_request_company">Company</string>
  <string name="choice_request_worker">Worker</string>
  <string name="choice_request_type_company">Company</string>
  <string name="choice_request_type_worker">Worker</string>
  <string name="action_select">Select</string>
  <string name="hint_request_skill_remove">Tap on skill to remove</string>
  <string name="hint_request_skill_add">To add skills press \'Add\' button</string>
  <string name="hint_request_skills_empty">this request has no Skills</string>
  <string name="hint_request_detail_empty">this request has no Detail</string>
  <string name="hint_request_brokers_empty">Admins still don\'t specified any brokers for this Request</string>
  <string name="hint_request_matches_empty">Applied brokers still don\'t match any request to this Request</string>
  <string name="hint_request_job_select">Please select a Job by clicking \'Select\' button</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="menu_navigation_logout">Logout</string>
  <string name="menu_navigation_refresh">Refresh Data</string>
  <string name="menu_navigation_exit">Exit</string>
  <string name="menu_navigation_test">Test Actions</string>
  <string name="menu_navigation_test_gallery">Gallery</string>
  <string name="menu_navigation_test_slideshow">Slideshow</string>
  <string name="menu_navigation_test_tools">Tools</string>
  <string name="menu_navigation_communicate">Communicate</string>
  <string name="menu_navigation_communicate_share">Share</string>
  <string name="menu_navigation_communicate_send">Send</string>
  <string name="menu_navigation_communicate_developer">Developer</string>
  <string name="menu_navigation_communicate_fanavard">Fanavard</string>

  <string name="dialog_user_title_change_title">Please select user\'s new title</string>
  <string name="dialog_user_title_change_action_change">Change</string>
  <string name="dialog_user_title_change_action_cancel">Cancel</string>
  <string name="dialog_exit_title">Are you sure you want to exit?</string>
  <string name="dialog_exit_message">Please rate us if you like this App!</string>
  <string name="dialog_exit_action_stay">Stay</string>
  <string name="dialog_exit_action_rate">Rate</string>
  <string name="dialog_exit_action_exit">Exit</string>
  <string name="dialog_job_cancel_title">Job Cancellation</string>
  <string name="dialog_job_cancel_message">Are you sure to cancel job request?\\nattention this action is Irreversible!</string>
  <string name="dialog_job_cancel_action_cancel">Cancel</string>
  <string name="dialog_job_cancel_action_keep">Keep</string>
  <string name="dialog_skill_select_title">Select job from list below:</string>
  <string name="dialog_skill_select_action_cancel">Cancel</string>
  <string name="dialog_skill_select_alert_rapeat">You can\'t select item. it exists there!</string>
  <string name="field_settings_language">Language</string>
  <string name="field_settings_language_fa">فارسی</string>
  <string name="field_settings_language_en">English</string>
  <string name="field_settings_test1">Test setting 1</string>
  <string name="field_settings_test1_left">Left</string>
  <string name="field_settings_test1_right">Right</string>
  <string name="field_settings_test1_center">Center</string>
  <string name="field_settings_test2">Test field 2</string>
  <string name="field_settings_language_hint">Please restart App to see the result.</string>
  <string name="field_settings_test1_hint">this a test field. any changes on this will not saved</string>
  <string name="field_settings_test2_hint">write any fake long message to test:</string>
  <string name="dialog_remove_broker_action_stay">Stay</string>
  <string name="dialog_remove_broker_action_remove">Remove</string>
  <string name="dialog_remove_broker_title">Are you sure you want to remove this broker from Request?</string>
  <string name="hint_request_brokers_remove">To delete a broker hold its avatar</string>
  <string name="menu_navigation_settings">Settings</string>
  <string name="title_screen_home">Home</string>
  <string name="title_settings">Settings</string>
  <string name="title_screen_about">About</string>
  <string name="menu_navigation_home">Home</string>
  <string name="menu_navigation_about">About</string>
  <string name="menu_navigation_action">Actions</string>
  <string name="menu_navigation">Navigation</string>
  <string name="prompt_user_title">Your Name</string>
  <string name="error_invalid_title">Please choose a title</string>
  <string name="tap_avatar_title">This is your avatar</string>
  <string name="tap_avatar_des">you can\'t change it in mock server, so accept it</string>
  <string name="tap_title_title">this is your profile public name (title)</string>
  <string name="tap_title_des">you can edit it later, I\'ll show you how later</string>
  <string name="tap_subtitle_title">this is your profile public stutus</string>
  <string name="tap_subtitle_des">in mock server its your phone number include your role in this Slavery system!</string>
  <string name="tap_edit_title">edit your profiles title</string>
  <string name="tap_edit_des">here, by taping this tiny button you can get ride of your previous title</string>
  <string name="tap_logout_title">Run away from system</string>
  <string name="tap_logout_des">OK, if you want, you can logout from this classified system</string>
  <string name="tap_dashboard_bottom_title">Bottom Navigation Bar</string>
  <string name="tap_dashboard_bottom_des">you can explore in this app by this tiny buttons also swipe left/right is supported ;)</string>
  <string name="tap_dashboard_drawer_title">Open side navigation menu again</string>
  <string name="tap_dashboard_drawer_des">you can open that side menu by taping on this tiny icon or swipe left to right at leftest! corner of screen :o</string>
  <string name="tap_requestList_fab_title">Add new Worker/Employer Request</string>
  <string name="tap_requestList_fab_des">you can post new job request by taping it. (remember to save :) )</string>
  <string name="tap_requestList_title">Request lists related to you</string>
  <string name="tap_requestList_des">here is list of all requests that related to you (owner, broker, or if you are admin: all :O )</string>
</resources>
