<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
		android:id="@+id/navigation_requests"
		android:icon="@drawable/ic_menu_requests"
		android:title="@string/title_requests" />

	<item
		android:id="@+id/navigation_chats"
		android:icon="@drawable/ic_menu_chat"
		android:title="@string/title_chats" />

  <item
    android:id="@+id/navigation_home"
    android:icon="@drawable/ic_menu_home"
    android:title="@string/title_dashboard" />

  <item
    android:id="@+id/navigation_settings"
    android:icon="@drawable/ic_menu_settings"
    android:title="@string/title_settings" />

  <item
    android:id="@+id/navigation_about"
    android:icon="@drawable/ic_menu_about"
    android:title="@string/title_about" />
</menu>
