<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  android:background="@color/colorBack">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:padding="8dp"
    android:orientation="vertical">
    <ir.chista.jobs.view.FieldBox
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:minHeight="32dp"
      android:text="@string/field_settings_language">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_settings_language_hint"
        android:lines="1"
        android:gravity="start|center_vertical"
        android:padding="4dp"
        android:textColor="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
      <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
        android:id="@+id/languageToggleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:textToggleLeft="@string/field_settings_language_en"
        app:textToggleRight="@string/field_settings_language_fa"
        app:checkedBorderColor="@color/colorPrimaryDark"
        app:checkedBackgroundColor="@color/colorPrimary"
        app:uncheckedBackgroundColor="@color/colorSecondaryText"
        app:uncheckedBorderColor="@color/colorSecondaryText"
        app:checkedTextColor="@color/colorIcons"
        app:uncheckedTextColor="@color/colorIcons"
      />
    </ir.chista.jobs.view.FieldBox>

    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      app:cardCornerRadius="6dp"
      app:cardBackgroundColor="@color/colorAccent">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorIcons"
        android:text="These cards are to fill the blanks"/>
    </android.support.v7.widget.CardView>

    <ir.chista.jobs.view.FieldBox
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:text="@string/field_settings_test1">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_settings_test1_hint"
        android:lines="1"
        android:gravity="start|center_vertical"
        android:padding="4dp"
        android:textColor="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
      <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:minHeight="48dp"
        app:textToggleLeft="@string/field_settings_test1_left"
        app:textToggleRight="@string/field_settings_test1_right"
        app:textToggleCenter="@string/field_settings_test1_center"
        app:checkedBorderColor="@color/colorPrimaryDark"
        app:checkedBackgroundColor="@color/colorPrimary"
        app:uncheckedBackgroundColor="@color/colorSecondaryText"
        app:uncheckedBorderColor="@color/colorSecondaryText"
        app:checkedTextColor="@color/colorIcons"
        app:uncheckedTextColor="@color/colorIcons"/>
    </ir.chista.jobs.view.FieldBox>

    <ir.chista.jobs.view.FieldBox
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:text="@string/field_settings_test2">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_settings_test2_hint"
        android:lines="1"
        android:gravity="start|center_vertical"
        android:padding="4dp"
        android:textColor="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
      <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="5"
        android:inputType="textMultiLine|textCapSentences"
        android:text="@string/app_description"/>
    </ir.chista.jobs.view.FieldBox>
  </LinearLayout>
</ScrollView>
