<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="4dp"
  tools:context=".screen.request.detail.RequestDetailActivity">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/actionBar"
    android:orientation="vertical"
    android:padding="4dp"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/field_request_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

      <Button
        android:id="@+id/requestTypeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"/>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/field_request_job"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

      <ir.hossainkhademian.jobs.view.RequestView
        android:id="@+id/requestView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"/>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/field_request_skills"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

      <EditText
        android:id="@+id/skillsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:editable="false"/>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/field_request_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

      <ir.hossainkhademian.jobs.view.UserView
        android:id="@+id/userView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"/>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/field_request_detail"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

      <EditText
        android:id="@+id/detailView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:editable="false"/>


      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/field_request_brokers"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

      <EditText
        android:id="@+id/brokersView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:editable="false"/>


      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/field_request_matches"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

      <EditText
        android:id="@+id/matchesView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:editable="false"/>
    </LinearLayout>
  </ScrollView>

  <LinearLayout
    android:id="@+id/actionBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    android:orientation="horizontal">
    <Button
      android:id="@+id/cancelAction"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      style="@style/Widget.AppCompat.Button.Colored"
      android:text="@string/action_cancel"/>
    <Button
      android:id="@+id/editAction"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      style="@style/Widget.AppCompat.Button.Colored"
      android:backgroundTint="@color/colorPrimaryDark"
      android:text="@string/action_edit"/>
  </LinearLayout>
</android.support.constraint.ConstraintLayout>
