<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:cardBackgroundColor="@color/colorPrimaryDark">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:id="@+id/titleView"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/subtitleView"
      android:layout_margin="8dp"
      app:layout_constraintVertical_chainStyle="packed"
      android:textAppearance="@style/TextAppearance.AppCompat.Headline"
      android:textColor="@color/colorIcons"
      android:gravity="center"
      android:text="@string/title_wait"/>

    <TextView
      android:text="@string/message_loading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:id="@+id/subtitleView"
      app:layout_constraintBottom_toTopOf="@id/progressBar"
      app:layout_constraintTop_toBottomOf="@id/titleView"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="@color/colorIcons"
      android:gravity="center"/>

    <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="?android:attr/progressBarStyle"
      android:layout_margin="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@id/cancelAction"
      app:layout_constraintTop_toBottomOf="@+id/subtitleView"/>

    <Button
      android:id="@+id/cancelAction"
      android:text="@string/action_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
  </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
