<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/constraint"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimary"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context=".screen.splash.SplashActivity">

  <TextView
    android:id="@+id/titleView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/subtitleView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_chainStyle="packed"
    android:padding="4dp"
    android:text="@string/title_loading"
    android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
    android:gravity="center"/>

  <TextView
    android:id="@+id/subtitleView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/titleView"
    app:layout_constraintBottom_toTopOf="@id/progress"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:padding="4dp"
    android:text="@string/subtitle_loading"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
    android:gravity="center"/>

  <ProgressBar
    android:id="@+id/progress"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/subtitleView"
    app:layout_constraintBottom_toTopOf="@id/fanavard"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="32dp"/>

  <ImageView
    android:id="@+id/fanavard"
    android:layout_width="wrap_content"
    android:layout_height="64dp"
    android:adjustViewBounds="true"
    android:contentDescription="@string/des_ic_fanavard"
    app:srcCompat="@drawable/ic_social_fanavard"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>


</android.support.constraint.ConstraintLayout>
